- Fixed bug #35293 (PDO segfaults when using persistent connections). (Tony)
- Fixed bug #35278 (Multiple virtual() calls crash Apache 2 php module). (Ilia)
- Fixed bug #35273 (Error in mapping soap - java types). (Dmitry)
- Fixed bug #35243 (php_mblen() crashes when compiled with thread-safety
  on Linux). (Patch: shulmanb at il dot ibm dot com, Jani)
- Fixed bug #33153 (crash in mssql_next result). (Frank)
- Fixed bug #33963 (mssql_bind() fails on input parameters). (Frank)
- Fixed bug #33201 (Crash when fetching some data types). (Frank)
- Fixed bug #32009 (crash when mssql_bind() is called more than once). (Frank)

17 Nov 2005, PHP 5.1 Release Candidate 6
- Changed function parameter parsing to handle integers in a non-strict fashion
  and to emit an E_NOTICE on badly formed integer values. (Ilia)
- Fixed Apache 2 regression with sub-request handling on non-linux systems.
  (Ilia, Tony)
- Fixed bug #35249 (compile failure when ext/readline is compiled as shared).
  (Jani)
- Fixed bug #35248 (sqlite_query() doesnt set error_msg when return value is
  being used). (Ilia) 
- Fixed bug #35079 (stream_set_blocking(true) toggles, not enables 
  blocking). (askalski at gmail dot com, Tony)

16 Nov 2005, PHP 5.1 Release Candidate 5
- Added an E_STRICT warning on the usage of {} for accessing of string offsets.
  (Ilia)
- Changed type hints to allow "null" as default value for class and array.
  (Marcus, Derick, Dmitry)
- Fixed __get/__set to allow recursive calls for different properties. (Dmitry)
- Fixed bug in mysqli extension with unsigned int(11) being represented as 
  signed integer in PHP instead of string in 32bit systems. (Andrey)
- Fixed initializing and argument checking for posix_mknod(). (Derick)
- Fixed bug #35239 (Objects can lose references). (Dmitry)
- Fixed bug #35229 (call_user_func() crashes when arguement_stack is nearly
  full). (Dmitry)
- Fixed bug #35197 (Destructor is not called). (Tony)