@@ -6,9 +6,9 @@ date_modify() function [2]
 <?php
 date_default_timezone_set("GMT");
 $d = date_create("2005-07-18 22:10:00 +0400");
-echo date_format($d, DATE_RFC822), "\n";
+echo date_format($d, date::RFC822), "\n";
 date_modify($d, "+1 hour");
-echo date_format($d, DATE_RFC822), "\n";
+echo date_format($d, date::RFC822), "\n";
 ?>
 --EXPECT--
 Mon, 18 Jul 2005 22:10:00 GMT+0400
